fixed overflow styling for description in announcements/events index/show pages

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -34,6 +34,7 @@ div.actions > a, div.actions > input  {
 
 th, td {
     padding-right: 30px !important;
+    vertical-align: baseline;
 }
 
 label {
